Gemini Phase I Schema Changes

# Version 2020.1.1 - 2020A
##########################
* Added "Multi-messenger astrophysics" keyword
* Hide "Suprime Cam" for subaru
* Add gender field to Investigator
* Changed TAC Category (now just Category) entries to:
  1. Planetary systems
  2. Star and planet formation
  3. Stars and stellar evolution
  4. Formation and evolution of compact objects
  5. Resolved stellar populations and their environments
  6. Galaxy evolution
  7.Cosmology and fundamental physics
  
  Old entries are mapped as follows:
  1. Solar System  -> Planetary systems
  2. Galactic      -> Stars and stellar evolution
  3. Extragalactic -> Galaxy evolution

# Version 2019.2.1 - 2019B
##########################

* Added new instrument, Zorro, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3454)
* Added new filter, ri, for GMOS-N. (REL-3621)

# Version 2019.1.1 - 2019A
##########################

# Version 2018.2.2 - 2018B
##########################

# Version 2018.2.1 - 2018B
##########################

* Added OVI and OVIC filters for GMOS-N and GMOS-S. (REL-3273)
* Added new instrument, 'Alopeke, with two modes, namely Speckle (0.0096"/pix, 6.7" FoV) and Wide Field (0.0725"/pix, 60" FoV). (REL-3351)

# Version 2018.1.1 - 2018A
##########################

* Hidden filter Y and J-lo for Flamingos2
* Added Subaru Intensive Program proposal class
* Renamed CFHT references to CFH

# Version 2017.2.1 - 2017B
##########################

* Formerly, the time field in Observation referred to program time.
  As per REL-2926, we are now dividing time into multiple categories to include calculated calibration overheads.
  This has resulted in a number of new fields in Observation, namely progTime, partTime, and time, where
  partTime is a function of progTime as per the new Overheads class, and time is the sum of these
  and represents total time.
* Texes is not available this semester.