@@ -54,9 +54,10 @@ object QueryArgs {
     case g: AlopekeBlueprint    => Right(Instrument.Nifs.id)      // REL-3351: treat Alopeke like NIFS until Visitor PWFS is changeable.
     case g: DssiBlueprint       => Right(Instrument.Nifs.id)      // REL-1061
     case g: GracesBlueprint     => Right(Instrument.GmosNorth.id) // REL-3288: GRACES uses GMOS-N OI.
+    case g: IgrinsBlueprint     => Right(Instrument.Nifs.id)      // REL-3714: treat IGRINS like NIFS.
     case g: TexesBlueprint      => Right(Instrument.Nifs.id)      // REL-1062
     case g: VisitorBlueprint    => Right(Instrument.Niri.id)      // REL-1090
-    case g: ZorroBlueprint      => Right(Instrument.Nifs.id)      // REL-3454: treat Zorro like Alopeke and DSSI.
+    case g: ZorroBlueprint      => Right(Instrument.Nifs.id)      // REL-3454: treat Zorro like NIFS.
     case g: GeminiBlueprintBase => Right(g.instrument.id)
     case _ => Left("Not a Gemini Instrument")
   }
