@@ -22,6 +22,7 @@ object Instrument {
   case object Gpi        extends Instrument(GS, "GPI")
   case object Graces     extends Instrument(GN, "GRACES")
   case object Gsaoi      extends Instrument(GS, "GSAOI")
+  case object Igrins     extends Instrument(GS, "IGRINS")
   case object Nici       extends Instrument(GS, "NICI")
   case object Phoenix    extends Instrument(GS, "Phoenix", "Phoenix", "PHOENIX")
   case object Trecs      extends Instrument(GS, "TReCS", "T-ReCS", "TReCS")
