@@ -74,6 +74,7 @@ object SpBlueprintFactory {
       case b: AlopekeBlueprint              => VisitorHandler(b)
       case b: DssiBlueprint                 => VisitorHandler(b)
       case b: ZorroBlueprint                => VisitorHandler(b)
+      case b: IgrinsBlueprint               => VisitorHandler(b)
       case b: GracesBlueprint               => Graces(b)
       case _                                => Left("Unexpected blueprint: " + base)
     }
@@ -400,6 +401,7 @@ object SpBlueprintFactory {
     def apply(b: AlopekeBlueprint):Either[String, SpVisitorBlueprint] = Right(new SpVisitorBlueprint(b.name))
     def apply(b: ZorroBlueprint):Either[String, SpVisitorBlueprint] = Right(new SpVisitorBlueprint(b.name))
     def apply(b: DssiBlueprint):Either[String, SpVisitorBlueprint] = Right(new SpVisitorBlueprint("DSSI"))
+    def apply(b: IgrinsBlueprint):Either[String, SpVisitorBlueprint] = Right(new SpVisitorBlueprint(b.name))
   }
 
   object GpiHandler {
